[tool.poetry]
name = "asclepius"
version = "0.1.0"
description = "Open-source tool for managing private medical data(and possibly any kind of documents)"
authors = ["MoZZez <arsenii_moiseev@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0.0"
tinydb = "^4.1.1"
pillow = "^7.2.0"
pdf2image = "^1.13.1"
matplotlib = "^3.3.0"
streamlit = "^0.63.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
